# sqlrest.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml
src/: lib.rs  main.rs  perf_test.rs
