[package]
name = "ontodev_sqlrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
indoc = "1.0"
regex = "1"
sqlx = { version = "0.5", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }