[package]
name = "ontodev_sqlrest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enquote = "1.1.0"
futures = "0.3"
indoc = "1.0"
regex = "1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serial_test = "1.0.0"
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }
tree-sitter = "~0.20.6"
urlencoding = "2.1.2"

[dependencies.tree-sitter-sqlrest]
git = "https://github.com/ontodev/tree-sitter-sqlrest"
rev = "0efbeb4ba0c77f8a8f26453e54c3cd3a6e1eb181"
